Added reading an upload path for avatars from configuration (web.xml) in listener to set it in UserService, GET avatar request returns a picture, PUT avatar also works in desired location defined by the path in web.xml